--- a/styles/index.css
+++ b/styles/index.css
@@ -7,37 +7,13 @@
 
 
   
-.cover-container-image {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-  }
   
-  .cover-text {
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
   
-  .scrolling-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow-y: auto; /* Enables vertical scrolling */
-    background: linear-gradient(transparent 60%, rgba(255, 255, 255, 0.8)); /* Fades content into the image */
-  }
   
-  .post-content {
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8);
-    margin-top: 60vh; /* Adjust based on where you want the content to start */
+
+  .scrollama-container {
+    width: 100%; /* Expand to full width */
+    margin: 0; /* Remove margins */
+    padding: 0; /* Remove padding */
   }
   
